--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tslib": "^2.3.0"
@@ -16,9 +17,17 @@
     "@nx/jest": "19.5.1",
     "@nx/js": "19.5.1",
     "@nx/react": "19.5.1",
+    "@nx/storybook": "^19.5.1",
     "@nx/vite": "19.5.1",
     "@nx/web": "19.5.1",
     "@nx/workspace": "19.5.1",
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/core-server": "7.6.20",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react-vite": "7.6.20",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -31,9 +40,13 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -48,11 +61,15 @@
     "nx": "19.5.1",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "storybook": "7.6.20",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
     "vitest": "^1.3.1"
   }
 }
